(Format: Year/Month/Day)
Changes for 0.9.8:
*04/01/11:
  * Fixed ImageControl cache problem (Henrik)
    ImageControl.hh/cc	
  * Hide menus when click on iconbar (Henrik)
    Screen.hh/cc, fluxbox.hh/cc, IconButton.cc, Toolbar.cc
*04/01/10:
  * Fixed a memory leak  (Henrik)
    We forgot to destroy screens on shutdown
    fluxbox.cc, Screen.cc
  * Fix a number of transparency issues for window frames (Simon)
    FbWinFrame.cc WinButton.hh/cc
*04/01/09:
  * Fixed color parse bug (Henrik)
    removing whitespaces
    Color.cc
  * Fixed an iconify bug in "All Windows" mode in IconbarTool (Henrik)
    IconbarTool.cc
*04/01/08:
  * Fixed some uninitialized variables (Henrik)      
  * Minor fixes for signed/unsigned warnings in FbTk (Henrik)
    FbTk/*

------------------------------------------------------------------------
Changes for 0.9.7:
*04/01/02:
  * Added new styles Emerge (from Nuno Alexandre) and 
    BlueFlux (from Lauri Hakkarainen)
  * Removed styles: Clean (CleanColor renamed to Clean), Rancor and Blue  (Henrik)
  * fbsetbg trivial: (Thanks Han) 
    Add support for random_number, provided by:  
    http://www.xs4all.nl/~hanb/software/arc4random.tar.bz2
    for the fans :)
    fbsetbg
  * Added menu item [separator] (Henrik)
    Screen.cc
  * Fixed bug in ThemeItem<int>::setFromString   (Henrik)
    It didn't check if sscanf returned error
    ThemeItems.hh
  * Fixed image cache bug (Henrik)
    ImageControl.hh
  * Fixed active/unfocus fallback bug (Henrik)
    FbWinFrame.cc
  * Tab completion in command dialog (Henrik)
    CommandDialog.hh
*03/12/30:
  * Added resource session.useMod1 <boolean> to disable/enable mod1   (Henrik)
    for Resize/Move window with mod1 + button 
    Window.cc, fluxbox.hh/cc
  * Fixed so it checks for caps, num and scrollock (Henrik)
    KeyUtil.hh/cc, fluxbox.cc, TextBox.cc, WorkspaceCmd.cc, Window.cc
  * Focus issue (Henrik) 
    Window.cc/hh, fluxbox.hh/cc
*03/12/29: