@@ -20,7 +20,7 @@
 // FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 // DEALINGS IN THE SOFTWARE.
 
-// $Id: IconbarTheme.hh,v 1.5 2003/08/19 21:26:45 fluxgen Exp $
+// $Id: IconbarTheme.hh,v 1.6 2004/01/13 14:41:32 rathnor Exp $
 
 #ifndef ICONBARTHEME_HH
 #define ICONBARTHEME_HH
@@ -51,12 +51,14 @@ public:
     const FbTk::Texture &focusedTexture() const { return *m_focused_texture; }
     const FbTk::Texture &unfocusedTexture() const { return *m_unfocused_texture; }
     const FbTk::Texture &emptyTexture() const { return *m_empty_texture; }
+    inline unsigned char alpha() const { return *m_alpha; }
 
 private:
     FbTk::ThemeItem<FbTk::Texture> m_focused_texture, m_unfocused_texture, m_empty_texture;
     BorderTheme m_focused_border, m_unfocused_border, m_border;
     TextTheme m_focused_text, m_unfocused_text;
     std::string m_name;
+    FbTk::ThemeItem<int> m_alpha;
 };
 
 #endif  // ICONBARTHEME_HH
